--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
     </head>
 </html>
 <body>
+    <h1>BASIC CODES</h1>
     <h1>Swap 2 numbers</h1>
     <input type="text"  id="n1">
     <br><br>
